samples/_failures_safe/1761208113_4331d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18671785.c: In function ‘main’:
./samples/SAFE/__tmp_18671785.c:144:5: error: expected declaration or statement at end of input
  144 |     }
      |     ^
